# experiments-2026-PMC-sparseful

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_experiments.sbatch
data/: experiment_seed-0_regions-3_sparsity-0.0_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.1_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.2_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.3_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.4_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.5_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.6_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.75_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.7_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.85_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.8_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.95_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.99_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0.9_dataset-CIFAR100_partitioning-Hard.csv  experiment_seed-0_regions-3_sparsity-0_dataset-EMNIST_partitioning-Hard.csv  experiment_seed-0_regions-5_sparsity-0.0_dataset-CIFAR100_partitioning-Hard.csv  (+115 more)
src/: CustomLeaderElection.py  PSFLClient.py  dummy_client.py  (+4 more)
(+2 files in other folders)
